--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <script src="js/bundle.js"></script>
 </head>
 <body>
-  Hello World!
+  <h3>Placeholder text!</h3>
+  <button>Click for new words</button>
 </body>
 </html>
