add ids to new elements

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <script src="js/bundle.js"></script>
 </head>
 <body>
-  <h3>Placeholder text!</h3>
-  <button>Click for new words</button>
+  <h3 id="text-display">Placeholder text!</h3>
+  <button id="text-button">Click for new words</button>
 </body>
 </html>
